--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "flow": "flow",
+    "eslint": "eslint",
+    "precheck": "npx prettier . --check",
+    "prewrite": "npx prettier . --write"
   },
   "dependencies": {
     "@docusaurus/core": "3.1.0",
@@ -25,8 +29,14 @@
     "sass": "^1.69.7"
   },
   "devDependencies": {
+    "@babel/preset-flow": "^7.23.3",
     "@docusaurus/module-type-aliases": "3.1.0",
-    "@docusaurus/types": "3.1.0"
+    "@docusaurus/types": "3.1.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-ft-flow": "^3.0.2",
+    "flow-bin": "^0.226.0",
+    "hermes-eslint": "^0.18.2",
+    "prettier": "3.2.2"
   },
   "browserslist": {
     "production": [
