--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "flow": "flow",
     "eslint": "eslint",
-    "precheck": "npx prettier . --check",
-    "prewrite": "npx prettier . --write"
+    "prefix": "npx prettier . --check --write"
   },
   "dependencies": {
     "@docusaurus/core": "3.1.0",
@@ -32,8 +31,10 @@
     "@babel/preset-flow": "^7.23.3",
     "@docusaurus/module-type-aliases": "3.1.0",
     "@docusaurus/types": "3.1.0",
+    "@giscus/react": "^2.4.0",
     "eslint": "^8.56.0",
     "eslint-plugin-ft-flow": "^3.0.2",
+    "eslint-plugin-react": "^7.33.2",
     "flow-bin": "^0.226.0",
     "hermes-eslint": "^0.18.2",
     "prettier": "3.2.2"
