--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
+    "crowdin": "crowdin",
+    "prefix": "npx prettier . --check --write",
     "write-heading-ids": "docusaurus write-heading-ids",
     "flow": "flow",
-    "eslint": "eslint",
-    "prefix": "npx prettier . --check --write"
+    "eslint": "eslint"
   },
   "dependencies": {
+    "@crowdin/cli": "^3.16.1",
     "@docusaurus/core": "3.1.0",
     "@docusaurus/preset-classic": "3.1.0",
     "@mdx-js/react": "^3.0.0",
