--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@crowdin/cli": "^3.16.1",
     "@docusaurus/core": "3.1.0",
     "@docusaurus/preset-classic": "3.1.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@mdx-js/react": "^3.0.0",
+    "@mui/icons-material": "^5.15.5",
+    "@mui/joy": "^5.0.0-beta.23",
     "clsx": "^2.0.0",
     "docusaurus-plugin-sass": "^0.2.5",
     "prism-react-renderer": "^2.3.0",
@@ -34,6 +38,7 @@
     "@docusaurus/module-type-aliases": "3.1.0",
     "@docusaurus/types": "3.1.0",
     "@giscus/react": "^2.4.0",
+    "babel-plugin-syntax-hermes-parser": "^0.18.2",
     "eslint": "^8.56.0",
     "eslint-plugin-ft-flow": "^3.0.2",
     "eslint-plugin-react": "^7.33.2",
