--- a/package.json
+++ b/package.json
@@ -21,11 +21,7 @@
     "@crowdin/cli": "^3.16.1",
     "@docusaurus/core": "3.1.0",
     "@docusaurus/preset-classic": "3.1.0",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
     "@mdx-js/react": "^3.0.0",
-    "@mui/icons-material": "^5.15.5",
-    "@mui/joy": "^5.0.0-beta.23",
     "@nextui-org/react": "^2.2.9",
     "clsx": "^2.0.0",
     "docusaurus-plugin-sass": "^0.2.5",
@@ -33,7 +29,8 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "sass": "^1.69.7"
+    "sass": "^1.70.0",
+    "typeit-react": "^2.7.1"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.23.3",
