--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "@docusaurus/preset-classic": "3.1.0",
     "@mdx-js/react": "^3.0.0",
     "@nextui-org/react": "^2.2.9",
+    "@react-icons/all-files": "^4.1.0",
+    "animate.css": "^4.1.1",
     "clsx": "^2.0.0",
     "docusaurus-plugin-sass": "^0.2.5",
     "framer-motion": "^10.18.0",
+    "heroicons": "^2.1.1",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-scroll": "^1.9.0",
     "sass": "^1.70.0",
     "typeit-react": "^2.7.1"
   },
@@ -37,6 +41,7 @@
     "@docusaurus/module-type-aliases": "3.1.0",
     "@docusaurus/types": "3.1.0",
     "@giscus/react": "^2.4.0",
+    "@heroicons/react": "^2.1.1",
     "autoprefixer": "^10.4.17",
     "babel-plugin-syntax-hermes-parser": "^0.18.2",
     "eslint": "^8.56.0",
@@ -46,6 +51,8 @@
     "hermes-eslint": "^0.18.2",
     "postcss": "^8.4.33",
     "prettier": "3.2.2",
+    "react-icons": "^5.0.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss": "^3.4.1"
   },
   "browserslist": {
